--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,9 @@ h1 {
    margin-left: 32px;
    margin-bottom: 48px;
 }
+.h2-section.mb {
+   margin-left: 0;
+}
 .bg-block-correct-position {
    background-size: cover;
    background-position: center;
@@ -1842,6 +1845,7 @@ div.cs-last {
    background: #fff;
    border-radius: 24px;
    width: calc(75% - 12px);
+   height: fit-content;
 }
 .basket_title {
    font-family: "TT Ramillas Trl", sans-serif;
@@ -1904,6 +1908,7 @@ div.cs-last {
    padding: 16px;
    border-radius: 16px;
    align-items: center;
+   width: 100%;
 }
 .basket_product.in-cart {
    background: #fff888;
@@ -1911,6 +1916,10 @@ div.cs-last {
 .basket_product__text {
    width: 55%;
    max-width: 772px;
+}
+.basket-product-box.hover .basket_product__text {
+   width: calc(55% - 48px);
+   max-width: 724px;
 }
 .basket_product__text-title {
    font-family: "TT Ramillas Trl", sans-serif;
@@ -1930,6 +1939,115 @@ div.cs-last {
 }
 .basket-product-price-box {
    margin-left: auto;
+}
+.basket-product-box {
+   display: flex;
+   align-items: center;
+   gap: 24px;
+}
+.basket-checkbox {
+   width: 24px;
+   height: 24px;
+   margin: 0;
+}
+.basket-summ {
+   padding: 24px;
+   border-radius: 24px;
+   background: #fff;
+   width: calc(25% - 12px);
+   display: flex;
+   flex-direction: column;
+}
+.basket_title {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 500;
+   font-size: 40px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.summ-block {
+   display: flex;
+   flex-direction: column;
+   gap: 27px;
+   margin-top: 48px;
+}
+.summ-title {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 500;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.summ-block_row {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+}
+.block_row__value {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.3;
+   color: #1d1d1d;
+}
+.block_row__price {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   text-align: right;
+   color: #1d1d1d;
+}
+.block_row__price span {
+   font-weight: 400;
+   font-size: 16px;
+}
+.summ-block_discr {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 1.24;
+   color: #1d1d1d;
+}
+.promo-imput {
+   background: #f8f3ed;
+   border: none;
+   padding: 20px 24px 20px;
+   border-radius: 10px 24px 24px 10px;
+   margin-bottom: 24px;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   color: #1d1d1d;
+}
+.summ-gift {
+   margin: 16px 0 24px;
+}
+.summ-total-row {
+   margin: 8px 0 21px;
+}
+.summ-checkout-btn {
+   border-radius: 24px;
+   padding: 16px 32px 18px 32px;
+   width: 386px;
+   height: 64px;
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #fff;
+   background: #ff5151;
+   width: 100%;
+   text-align: center;
+}
+.coral {
+   color: #ff5151;
 }
 /*  */
 
