--- a/css/main.css
+++ b/css/main.css
@@ -1978,6 +1978,12 @@ div.cs-last {
    gap: 27px;
    margin-top: 48px;
 }
+.cabinet-block {
+   display: flex;
+   flex-direction: column;
+   gap: 24px;
+   margin-top: 24px;
+}
 .summ-title {
    font-family: "TT Ramillas Trl", sans-serif;
    font-weight: 500;
@@ -2252,6 +2258,97 @@ div.cs-last {
 }
 .coral {
    color: #ff5151;
+}
+.cashback-listener_values .bold {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.cashback-listener_values .bold > span {
+   font-size: 16px;
+}
+.cashback-listener_values {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+
+.cashback-listener {
+   margin: 48px 0 24px;
+}
+
+.cashback-listener_level {
+   margin-top: 12px;
+}
+.cashback_level__status-bar {
+   width: 50%;
+   height: 16px;
+   border-radius: 56px;
+   background: #6d7762;
+}
+.bonus-card {
+   width: 100%;
+   aspect-ratio: 386/248;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   padding: 24px;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: end;
+}
+.bonus-card_value {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 48px;
+   line-height: 1.1;
+   color: #fff;
+}
+.bonus-card_value span {
+   font-weight: 400;
+}
+.bonus-card_name {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 500;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #fff;
+   margin-top: 16px;
+}
+.cashback-info {
+   display: flex;
+   align-items: center;
+   gap: 5px;
+}
+.cabinet-tabs {
+   width: 100%;
+   display: flex;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.cabinet-tab {
+   border-radius: 24px;
+   padding: 12px 24px 14px 24px;
+}
+.cabinet-tab.active {
+   background: #fff;
 }
 /*  */
 
