--- a/css/main.css
+++ b/css/main.css
@@ -1845,12 +1845,30 @@ div.cs-last {
    flex-wrap: wrap;
    gap: 24px;
 }
+.cabinet-zone {
+   margin-top: 48px;
+   display: flex;
+   flex-wrap: wrap;
+   gap: 24px;
+}
 .basket {
    padding: 24px;
    background: #fff;
    border-radius: 24px;
    width: calc(75% - 12px);
    height: fit-content;
+}
+.cabinet {
+   padding: 24px;
+   background: #fff;
+   border-radius: 24px;
+   width: calc(75% - 12px);
+}
+.orders {
+   padding: 24px;
+   background: #fff;
+   border-radius: 24px;
+   width: 100%;
 }
 .basket_title {
    font-family: "TT Ramillas Trl", sans-serif;
@@ -2350,6 +2368,144 @@ div.cs-last {
 .cabinet-tab.active {
    background: #fff;
 }
+.bonus-info-subt {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+   margin: 48px 0 24px;
+}
+.bonus-info-disc {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   color: #1d1d1d;
+   max-width: 570px;
+}
+.orders-tabs {
+   display: flex;
+   width: fit-content;
+   border-radius: 16px;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   color: #1d1d1d;
+
+   background: #f8f3ed;
+   margin: 48px 0 24px;
+}
+.orders-tab {
+   border-radius: 16px;
+   padding: 14px 16px;
+}
+.orders-tab.active {
+   background: #6d7762;
+   color: #fff;
+}
+.orders-period {
+   display: flex;
+   gap: 24px;
+   margin: 24px 0 48px;
+}
+#order-period-start::after {
+   content: "Начало периода";
+   position: absolute;
+   right: 24px;
+   top: 50%;
+   transform: translateY(-50%);
+   z-index: -1;
+}
+#order-period-start,
+#order-period-end {
+   border-radius: 24px;
+   padding: 22px 24px;
+   max-width: 410px;
+   width: 25%;
+   height: 64px;
+   border: none;
+   position: relative;
+   background: #f8f3ed;
+}
+
+.order-list {
+   list-style: none;
+   display: flex;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 1.5;
+   color: #1d1d1d;
+   gap: 24px;
+}
+
+.order-item {
+   list-style: none;
+   display: flex;
+   align-items: center;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   color: #1d1d1d;
+   gap: 24px;
+}
+.order-list-item-1 {
+   width: 24%;
+   max-width: 410px;
+}
+.order-list-item-2 {
+   width: 8%;
+   max-width: 129px;
+}
+.order-list-item-3 {
+   width: 8%;
+   max-width: 128px;
+   text-align: right;
+}
+.order-list-item-4 {
+   width: 8%;
+   max-width: 128px;
+}
+.order-list-item-5 {
+   width: 16%;
+   max-width: 281px;
+}
+.order-list-item-6 {
+   width: 24%;
+   max-width: 410px;
+   display: flex;
+   align-items: center;
+   gap: 7px;
+}
+.order-list-item-7 {
+   width: 12%;
+   text-align: end;
+}
+.order-item .order-list-item-3 {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.order-item .order-list-item-1 {
+   font-weight: 700;
+}
+.orders-data {
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+   gap: 24px;
+}
+
 /*  */
 
 /* */
