--- a/css/media.css
+++ b/css/media.css
@@ -423,6 +423,107 @@
    .hidden-nav-menu {
       gap: 24px;
    }
+   .orders-tabs-overflow {
+      overflow-x: scroll;
+      width: 100%;
+   }
+   .orders-tabs-overflow::-webkit-scrollbar {
+      display: none;
+   }
+   .orders-tabs {
+      margin: 20px 0;
+      border-radius: 10px;
+      width: max-content;
+   }
+   .orders-tab {
+      flex-shrink: 0;
+      border-radius: 10px;
+   }
+}
+@media (max-width: 900px) {
+   .order-list {
+      display: none;
+   }
+   .order-item {
+      flex-direction: column;
+      align-items: start;
+      position: relative;
+      gap: 10px;
+   }
+   .order-item > li {
+      width: 100%;
+      max-width: unset;
+      text-align: right;
+      display: flex;
+      font-size: 14px;
+   }
+   .order-item .order-list-item-3 {
+      font-size: 14px;
+   }
+
+   .order-list-item-1::before {
+      content: "Заказы";
+      margin-right: auto;
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+   }
+   .order-list-item-2::before {
+      content: "Кол-во";
+      margin-right: auto;
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+   }
+   .order-list-item-3::before {
+      content: "Стоимость";
+      margin-right: auto;
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+   }
+   .order-list-item-4::before {
+      content: "Валюта";
+      margin-right: auto;
+      display: block;
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+   }
+   .order-list-item-5::before {
+      content: "Статус";
+      margin-right: auto;
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+   }
+   .order-list-item-6::before {
+      content: "События";
+      margin-right: auto;
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+   }
+   .order-list-item-7::before {
+      content: "Дата операции";
+      margin-right: auto;
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+   }
+   .orders-data {
+      gap: 40px;
+   }
+   .orders-data > ul:not(:last-child)::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background: #b1b1b1;
+      left: 0;
+      bottom: -20px;
+   }
 }
 @media (max-width: 800px) {
    .parent {
@@ -628,6 +729,37 @@
    }
    .you-owner-check {
       font-size: 14px;
+   }
+   .orders-period {
+      flex-wrap: wrap;
+      gap: 10px;
+      margin: 20px 0 30px;
+   }
+   #order-period-start,
+   #order-period-end {
+      width: 100%;
+      max-width: unset;
+      border-radius: 10px;
+   }
+
+   .img-search-order_btn::after {
+      content: "Искать";
+      display: block;
+      color: #fff;
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.24;
+      letter-spacing: 0.01em;
+   }
+   .img-search-order_btn {
+      width: 100%;
+      background: #ff5151;
+      border-radius: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 10px;
    }
 }
 
