--- a/css/main.css
+++ b/css/main.css
@@ -2620,6 +2620,17 @@ div.cs-last {
    width: 25%;
    background: #6c6050;
 }
+.grey-bg {
+   position: fixed;
+   width: 100vw;
+   height: 100dvh;
+   top: 0;
+   left: 0;
+   background: #000;
+   opacity: 0.5;
+   z-index: 145;
+   display: none;
+}
 /*  */
 
 /* */
