--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,10 @@ h1 {
    background: white;
    opacity: 0.5;
 }
+.footer-line_line {
+   background: #6c6050;
+   opacity: 1;
+}
 
 .video-preview {
    position: relative;
@@ -230,7 +234,9 @@ h1 {
    display: flex;
    align-items: center;
 }
-
+.ramillas-footer {
+   font-family: "TT Ramillas Trl";
+}
 .catalog-home-blocks {
    display: flex;
    flex-wrap: wrap;
@@ -393,7 +399,7 @@ h1 {
    line-height: 1.375;
    text-align: center;
    color: #fff;
-   width: 65%;
+   /* width: 65%; */
    opacity: 0;
    height: 0;
    transition: 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
@@ -402,6 +408,7 @@ h1 {
    opacity: 1;
    height: auto;
    margin: 50px 0;
+   width: 65%;
    transition: 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
 }
 .panel_magic__show-collection {
@@ -863,7 +870,7 @@ footer {
    height: 1080px;
 }
 .footer_left-side {
-   width: 50%;
+   width: 25%;
    background-image: url(../assets/content/footer-bg.png);
    background-size: cover;
 
@@ -874,8 +881,8 @@ footer {
    justify-content: space-between;
 }
 .footer_rignt-side {
-   width: 50%;
-   background: #6c6050;
+   width: 75%;
+   background: #e1e8e0;
    padding: 56px 32px;
    display: flex;
    flex-wrap: wrap;
@@ -886,21 +893,21 @@ footer {
    font-size: 12px;
    line-height: 1.33333;
    letter-spacing: 0em;
-   color: #fff;
+   color: #262626;
 }
 .footer_discription {
    font-family: "Inter", sans-serif;
    font-weight: 400;
    font-size: 12px;
    line-height: 1.33333;
-   color: rgba(255, 255, 255, 0.48);
+   /* color: rgba(255, 255, 255, 0.48); */
 }
 .footer-title {
    font-family: "TT Ramillas Trl", sans-serif;
    font-weight: 400;
    font-size: 24px;
    line-height: 1;
-   color: #fff;
+   color: #262626;
    margin-bottom: 48px;
 }
 .footer-u-list > li > a {
@@ -908,7 +915,7 @@ footer {
    font-weight: 400;
    font-size: 16px;
    line-height: 1.24;
-   color: #fff;
+   color: #262626;
    text-decoration: none;
 }
 .footer-u-list > li {
@@ -929,7 +936,7 @@ footer {
    font-weight: 400;
    font-size: 40px;
    line-height: 1;
-   color: #fff;
+   color: #262626;
 }
 /* 2-page */
 .h2-no-margin {
